tests/rosetta/out/Erlang/15-puzzle-solver.error
run: exit status 127
/tmp/15-puzzle-solver.erl:6:64: syntax error before: '('
escript: There were compilation errors.
