tests/rosetta/out/Erlang/15-puzzle-solver.erl
#!/usr/bin/env escript
%% Generated by Mochi compiler v0.10.30 on 2025-07-19T01:03:36Z
% 15-puzzle-solver.erl - generated from 15-puzzle-solver.mochi

main(_) ->
    io:format("~p~n", [mochi_get(FifteenPuzzleExample, Testpkg)()]).

mochi_get(K, M) ->
    case maps:find(K, M) of
        {ok, V} -> V;
        error ->
            Name = atom_to_list(K),
            case string:tokens(Name, "_") of
                [Pref|_] ->
                    P = list_to_atom(Pref),
                    case maps:find(P, M) of
                        {ok, Sub} when is_map(Sub) -> maps:get(K, Sub, undefined);
                        _ -> undefined
                    end;
                _ -> undefined
            end
        end.
